--- a/Webbanhang/Views/Large/Listing.cshtml
+++ b/Webbanhang/Views/Large/Listing.cshtml
@@ -180,10 +180,10 @@
                             <option>Cheapest</option>
                         </select>
                         <div class="btn-group">
-                            <a href="https://localhost:44335/Grid/Listing" class="btn btn-light" data-toggle="tooltip" title="List view">
+                            <a href="@Url.Action("Listing","Grid", new {})" class="widget-view"> class="btn btn-light" data-toggle="tooltip" title="List view">
                                 <i class="fa fa-bars"></i>
                             </a>
-                            <a href="https://localhost:44335/Large/Listing" class="btn btn-light active" data-toggle="tooltip" title="Grid view">
+                            <a href="@Url.Action("Large","Grid", new {})" class="widget-view"> class="btn btn-light active" data-toggle="tooltip" title="Grid view">
                                 <i class="fa fa-th"></i>
                             </a>
                         </div>
