--- a/Webbanhang/Views/Cart/Shopping.cshtml
+++ b/Webbanhang/Views/Cart/Shopping.cshtml
@@ -7,9 +7,11 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-2 col-lg-3 col-md-12">
-                    <a href="https://localhost:44335/" class="brand-wrap">
-                        <img class="logo" src="~/Content/images//logo.png">
-                    </a> <!-- brand-wrap.// -->
+                    
+                        <a href="@Url.Action("Index","Home", new {})" class="brand-wrap">
+                            <img class="logo" src="~/Content/images/logo.png">
+                        </a> <!-- brand-wrap.// -->
+                    
 
                 </div>
                 <div class="col-xl-6 col-lg-5 col-md-6">
@@ -34,38 +36,39 @@
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="widgets-wrap float-md-right">
                         <div class="widget-header mr-3">
-                            <a href="#" class="widget-view">
+                            <a href="@Url.Action("Login","Home", new {})" class="widget-view">
                                 <div class="icon-area">
-                                    @Html.ActionLink("sản phẩm", "User", "Login", new { }, null)
-                                    <i class="fa fa-user"></i>
-                                    <span class="notify">3</span>
+                                   
+                                        <i class="fa fa-user"></i>
+                                        
                                 </div>
-                                <small class="text"> Đăng nhập </small>
+                                <small class="text"> @Html.ActionLink("Đăng nhập", "Login", "Home", new { }, null) </small>
                             </a>
                         </div>
                         <div class="widget-header mr-3">
-                            <a href="https://localhost:44335/Register/User" class="widget-view">
+                            <a href="@Url.Action("User","Register", new {})" class="widget-view">
+
                                 <div class="icon-area">
                                     <i class="fa fa-comment-dots"></i>
                                     <span class="notify">1</span>
                                 </div>
-                                <small class="text"> Đăng ký </small>
+                                <small class="text"> @Html.ActionLink("Đăng Ký", "User", "Register", new { }, null)</small>
                             </a>
                         </div>
                         <div class="widget-header mr-3">
-                            <a href="https://localhost:44335/Grid/Listing" class="widget-view">
+                            <a href="@Url.Action("Listing","Grid", new {})" class="widget-view">
                                 <div class="icon-area">
                                     <i class="fa fa-store"></i>
                                 </div>
-                                <small class="text"> Đặt hàng </small>
+                                <small class="text">@Html.ActionLink("Đặt hàng", "Listing", "Grid", new { }, null) </small>
                             </a>
                         </div>
                         <div class="widget-header">
-                            <a href="https://localhost:44335/Cart/Shopping" class="widget-view">
+                            <a href="@Url.Action("Shopping","Cart", new {})" class="widget-view">
                                 <div class="icon-area">
                                     <i class="fa fa-shopping-cart"></i>
                                 </div>
-                                <small class="text"> Giỏ hàng </small>
+                                <small class="text">@Html.ActionLink("Giỏ hàng", "Shopping", "Cart", new { }, null)</small>
                             </a>
                         </div>
                     </div> <!-- widgets-wrap.// -->
