--- a/Webbanhang/Views/Category/ProductCategory.cshtml
+++ b/Webbanhang/Views/Category/ProductCategory.cshtml
@@ -193,14 +193,15 @@
             <article class="card card-product-list">
                 <div class="row no-gutters">
                     <aside class="col-md-3">
-                        <a href="#" class="img-wrap">
+                        <a href="@Url.Action("Detail","Product", new {id=item.Id})" class="img-wrap">
                             <span class="badge badge-danger"> NEW </span>
                             <img src="~/Content/images/items/@item.Avartar">
+                          
                         </a>
                     </aside> <!-- col.// -->
                     <div class="col-md-6">
                         <div class="info-main">
-                            <a href="#" class="h5 title"> @item.Name</a>
+                            <a href="@Url.Action("Detail","Product", new {id=item.Id})" class="h5 title"> @item.Name</a>
                             <div class="rating-wrap mb-2">
                                 <ul class="rating-stars">
                                     <li style="width:100%" class="stars-active">
@@ -241,7 +242,7 @@
                             <p class="text-muted mt-3">Grand textile Co</p>
                             <p class="mt-3">
                                 <a href="#" class="btn btn-outline-primary"> <i class="fa fa-envelope"></i> Contact supplier </a>
-                                <a href="#" class="btn btn-light"><i class="fa fa-heart"></i> Save </a>
+                                <a href="#" class="btn btn-light"><i class="fa fa-heart"></i> Lưu </a>
                             </p>
 
                             <label class="custom-control mt-3 custom-checkbox">
