--- a/Webbanhang/Views/Product/Detail.cshtml
+++ b/Webbanhang/Views/Product/Detail.cshtml
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-2 col-lg-3 col-md-12">
-                    <a href="https://localhost:44335/" class="brand-wrap">
+                    <a href="@Url.Action("Index","Home", new {})" class="brand-wrap">
                         <img class="logo" src="~/Content/images/logo.png">
                     </a> <!-- brand-wrap.// -->
                 </div>
@@ -37,7 +37,7 @@
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="widgets-wrap float-md-right">
                         <div class="widget-header mr-3">
-                            <a href="https://localhost:44335/Login/User" class="widget-view">
+                            <a href="@Url.Action("User","Login", new {})" class="widget-view">
                                 <div class="icon-area">
                                     <i class="fa fa-user"></i>
                                     <span class="notify">3</span>
@@ -46,7 +46,7 @@
                             </a>
                         </div>
                         <div class="widget-header mr-3">
-                            <a href="https://localhost:44335/Register/User" class="widget-view">
+                            <a href="@Url.Action("User","Register", new {})" class="widget-view">
                                 <div class="icon-area">
                                     <i class="fa fa-comment-dots"></i>
                                     <span class="notify">1</span>
@@ -55,7 +55,7 @@
                             </a>
                         </div>
                         <div class="widget-header mr-3">
-                            <a href="https://localhost:44335/Grid/Listing" class="widget-view">
+                            <a href="@Url.Action("Listing","Grid", new {})" class="widget-view">
                                 <div class="icon-area">
                                     <i class="fa fa-store"></i>
                                 </div>
@@ -63,7 +63,7 @@
                             </a>
                         </div>
                         <div class="widget-header">
-                            <a href="https://localhost:44335/Cart/Shopping" class="widget-view">
+                            <a href="@Url.Action("Shopping","Cart", new {})" class="widget-view">
                                 <div class="icon-area">
                                     <i class="fa fa-shopping-cart"></i>
                                 </div>
@@ -230,7 +230,7 @@
                             </div>
                         </div> <!-- col.// -->
                         <div class="form-group col-md">
-                            <a href="https://localhost:44335/Cart/Shopping" class="btn  btn-primary">
+                            <a  href="@Url.Action("Shopping","Cart", new {})" class="widget-view"> class="btn  btn-primary">
                                 <i class="fas fa-shopping-cart"></i> <span class="text">Add to cart</span>
                             </a>
                             <a href="#" class="btn btn-light">
