--- a/Webbanhang/Areas/Admin/Views/Product/Delete.cshtml
+++ b/Webbanhang/Areas/Admin/Views/Product/Delete.cshtml
@@ -21,7 +21,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.Avartar)
+                <img src="~/Content/images/items/@Html.DisplayFor(modelItem=>Model.Avartar)" style="width:100px;height:100px" />
             </dt>
 
             <dd>
