--- a/Webbanhang/Views/Home/Index.cshtml
+++ b/Webbanhang/Views/Home/Index.cshtml
@@ -47,7 +47,7 @@
                                     @if (Session["idUser"] != null)
                                     {
                                         <small class="text">
-                                            <a href="@Url.Action("Index","Product", new {})">Trang Admin </a>
+                                            <a href="~/Admin/Product/Index">Trang Admin </a>
                                         </small>
                                         <a href="~/Home/Logout">Đăng Xuất </a>
 
