--- a/Webbanhang/Areas/Admin/Views/Product/Details.cshtml
+++ b/Webbanhang/Areas/Admin/Views/Product/Details.cshtml
@@ -6,91 +6,96 @@
 
 <h2>Chi tiết sản phẩm</h2>
 <div class="content-wrapper">
-    <div>
+    @using (Html.BeginForm("Details", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
 
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.Name)
-            </dt>
+        @Html.AntiForgeryToken()
+        <div>
 
-            <dd>
-                @Html.DisplayFor(model => model.Name)
-            </dd>
+            <hr />
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Avartar)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Avartar)
-            </dd>
+                <dt>
+                    <img src="~/Content/images/items/@Html.DisplayFor(modelItem=>Model.Avartar)" style="width:100px;height:100px" />
+                </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.CategoryId)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Avartar)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.CategoryId)
-            </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.CategoryId)
+                </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.ShortDes)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.CategoryId)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.ShortDes)
-            </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.ShortDes)
+                </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.FullDescription)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.ShortDes)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.FullDescription)
-            </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.FullDescription)
+                </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Price)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.FullDescription)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Price)
-            </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Price)
+                </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.PriceDiscount)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Price)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.PriceDiscount)
-            </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.PriceDiscount)
+                </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.TypeId)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.PriceDiscount)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.TypeId)
-            </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.TypeId)
+                </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.Slug)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.TypeId)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.Slug)
-            </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.Slug)
+                </dt>
 
-            <dt>
-                @Html.DisplayNameFor(model => model.BrandId)
-            </dt>
+                <dd>
+                    @Html.DisplayFor(model => model.Slug)
+                </dd>
 
-            <dd>
-                @Html.DisplayFor(model => model.BrandId)
-            </dd>
-        </dl>
-    </div>
+                <dt>
+                    @Html.DisplayNameFor(model => model.BrandId)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.BrandId)
+                </dd>
+            </dl>
+        </div>
+    }
     <p>
         @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
         @Html.ActionLink("Quay lại", "Index")
