--- a/Webbanhang/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Webbanhang/Areas/Admin/Views/Product/Edit.cshtml
@@ -5,20 +5,21 @@
 
 }
 <div class="content-wrapper">
+    <script src="~/Scripts/ckeditor/ckeditor.js"></script>
     <h2>Chỉnh sửa</h2>
-    <div class="form-horizontal">
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
 
+    @using (Html.BeginForm("Edit", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="form-horizontal">
 
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.Id)
-
             <div class="form-group">
                 @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
+
                     @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                 </div>
@@ -27,15 +28,14 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Avartar, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Avartar, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Avartar, "", new { @class = "text-danger" })
+                    <input type="file" name="ImageUpload" />
                 </div>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.CategoryId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.CategoryId, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.DropDownListFor(model => model.CategoryId, ViewBag.ListCategory as SelectList, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -51,7 +51,10 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.FullDescription, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.FullDescription, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.TextAreaFor(model => model.FullDescription, htmlAttributes: new { @class = "form-control", @id = "FullDescription" })
+                    <script type="text/javascript" lang="javascript">
+                        CKEDITOR.replace("FullDescription")
+                    </script>
                     @Html.ValidationMessageFor(model => model.FullDescription, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -91,19 +94,20 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.BrandId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.BrandId, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.DropDownListFor(model => model.BrandId, ViewBag.ListBrand as SelectList, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.BrandId, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Lưu thay đổi" class="btn btn-default" />
-                </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Lưu thay đổi" class="btn btn-default" />
             </div>
+        </div>
 
-        }
-    </div>
-    <div>
-        @Html.ActionLink("Quay lại", "Index")
+    }
+</div>
+        <div>
+            @Html.ActionLink("Quay lại", "Index")
 
-    </div>
+        </div>
