--- a/Webbanhang/Areas/Admin/Views/Product/Details.cshtml
+++ b/Webbanhang/Areas/Admin/Views/Product/Details.cshtml
@@ -97,7 +97,7 @@
         </div>
     }
     <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+        @Html.ActionLink("Chỉnh sửa", "Edit", new { id = Model.Id }) |
         @Html.ActionLink("Quay lại", "Index")
     </p>
 </div>
