--- a/Webbanhang/Views/Home/Contact.cshtml
+++ b/Webbanhang/Views/Home/Contact.cshtml
@@ -5,13 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+   Khu phố 3<br />
+    Tân Thiện, Thị xã Lagi Tỉnh Bình Thuận<br />
+    <abbr title="Phone">0889245443</abbr>
+    44335
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Hỗ Trợ:</strong>   <a href="example.com"></a><br />
+    <strong>Thị trường:</strong> <a href="https://www.marketing.com/"></a>
 </address>
