--- a/Webbanhang/Views/Shared/_Layout.cshtml
+++ b/Webbanhang/Views/Shared/_Layout.cshtml
@@ -29,13 +29,11 @@
     
 </head>
 <body>
-    
-    
+
+
     @RenderBody()
     <!-- section-header.// -->
-
-
-    <footer class="section-footer bg-secondary">
+    <!--<footer class="section-footer bg-secondary">
         <div class="container">
             <section class="footer-top padding-y-lg text-white">
                 <div class="row">
@@ -87,17 +85,16 @@
                         </ul>
                     </aside>
                 </div> <!-- row.// -->
-            </section>	<!-- footer-top.// -->
+    <!--</section>	<!-- footer-top.// -->
+    <!-- <section class="footer-bottom text-center">
 
-            <section class="footer-bottom text-center">
-
-                <p class="text-white">Privacy Policy - Terms of Use - User Information Legal Enquiry Guide</p>
-                <p class="text-muted"> &copy 2019 Company name, All rights reserved </p>
-                <br>
-            </section>
-        </div><!-- //container -->
-    </footer>
-    <!-- ========================= FOOTER END // ========================= -->
+         <p class="text-white">Privacy Policy - Terms of Use - User Information Legal Enquiry Guide</p>
+         <p class="text-muted"> &copy 2019 Company name, All rights reserved </p>
+         <br>
+     </section>
+     </div><!-- //container -->
+    <!-- </footer>
+     <!-- ========================= FOOTER END // ========================= -->
 
 
 
