--- a/Webbanhang/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Webbanhang/Areas/Admin/Views/Product/Edit.cshtml
@@ -52,7 +52,7 @@
                 @Html.LabelFor(model => model.FullDescription, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.TextAreaFor(model => model.FullDescription, htmlAttributes: new { @class = "form-control", @id = "FullDescription" })
-                    <script type="text/javascript" lang="javascript">
+                    <script type="text/javascript" lang="javascript"  validateRequest=”false”>
                         CKEDITOR.replace("FullDescription")
                     </script>
                     @Html.ValidationMessageFor(model => model.FullDescription, "", new { @class = "text-danger" })
@@ -78,7 +78,7 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.TypeId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.TypeId, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.DropDownListFor(model => model.TypeId, ViewBag.ListCategory as SelectList, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.TypeId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -107,7 +107,7 @@
 
     }
 </div>
-        <div>
-            @Html.ActionLink("Quay lại", "Index")
+<div>
+    @Html.ActionLink("Quay lại", "Index")
 
-        </div>
+</div>
