--- a/Webbanhang/Views/Cart/Index.cshtml
+++ b/Webbanhang/Views/Cart/Index.cshtml
@@ -18,7 +18,7 @@
                 dataType: "json",
                 contentType: "application/json; charset=utf-8",
                 success: function () {
-                  
+
                     $('#CartCount').text(@Session["count"] - 1);
                     $("#product-" + model.Id).remove();
                 },
@@ -30,68 +30,82 @@
         });
     });
 </script>
+
 <header class="section-header">
     <section class="header-main border-bottom">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-2 col-lg-3 col-md-12">
-                    <a href="http://bootstrap-ecommerce.com" class="brand-wrap">
+                    <a href="@Url.Action("Index","Home", new {})" class="brand-wrap">
                         <img class="logo" src="~/Content/images/logo.png">
                     </a> <!-- brand-wrap.// -->
+
                 </div>
                 <div class="col-xl-6 col-lg-5 col-md-6">
-                    <form action="#" class="search-header">
+                    <form action="@Url.Action("Search","Home")" class="search-header" name="timkiem">
                         <div class="input-group w-100">
-                            <select class="custom-select border-right" name="category_name">
-                                <option value="">All type</option>
-                                <option value="codex">Special</option>
-                                <option value="comments">Only best</option>
-                                <option value="content">Latest</option>
-                            </select>
-                            <input type="text" class="form-control" placeholder="Search">
+                            @*<input type="text" name="search" class="form-control" />
+                    <input type="submit" name="submit" value="tìm kiếm" class="form-control"/>*@
 
+
+                            <input type="text" class="form-control" placeholder="Tìm kiếm sản phẩm" name="key">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="submit">
-                                    <i class="fa fa-search"></i> Search
+                                    <i class="fa fa-search"></i> Tìm kiếm
                                 </button>
                             </div>
                         </div>
                     </form> <!-- search-wrap .end// -->
-                </div> <!-- col.// -->
+                </div><!-- col.// -->
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="widgets-wrap float-md-right">
                         <div class="widget-header mr-3">
-                            <a href="#" class="widget-view">
+                            <a href="@Url.Action("Login","Home", new {})" class="widget-view">
                                 <div class="icon-area">
                                     <i class="fa fa-user"></i>
-                                    <span class="notify">3</span>
                                 </div>
-                                <small class="text"> My profile </small>
-                            </a>
+
+
+                                @if (Session["idUser"] != null)
+                                {
+                                    <small class="text">
+                                        <a href="~/Admin/Product/Index">Trang Admin </a>
+                                    </small>
+                                    <a href="~/Home/Logout">Đăng Xuất </a>
+
+                                }
+                                else
+                                {
+                                    <small class="text">
+                                        <a href="~/Home/Login">Đăng Nhập</a>
+                                    </small>
+                                }
+
                         </div>
+
                         <div class="widget-header mr-3">
-                            <a href="#" class="widget-view">
+                            <a href="@Url.Action("Register","Home", new {})" class="widget-view">
                                 <div class="icon-area">
-                                    <i class="fa fa-comment-dots"></i>
-                                    <span class="notify">1</span>
+                                    <i class="fa fa-user"></i>
                                 </div>
-                                <small class="text"> Message </small>
+                                <small class="text">@Html.ActionLink("Đăng Ký", "Register", "Home", new { }, null) </small>
                             </a>
                         </div>
-                        <div class="widget-header mr-3">
-                            <a href="#" class="widget-view">
+                        @*<div class="widget-header mr-3">
+                            <a href="@Url.Action("Listing","Grid", new {})" class="widget-view">
                                 <div class="icon-area">
                                     <i class="fa fa-store"></i>
                                 </div>
-                                <small class="text"> Orders </small>
+                                <small class="text"> @Html.ActionLink("Đặt hàng", "Listing", "Grid", new { }, null) </small>
                             </a>
-                        </div>
+                        </div>*@
                         <div class="widget-header">
-                            <a href="#" class="widget-view">
+                            <a href="@Url.Action("Index","Cart", new {})" class="widget-view">
                                 <div class="icon-area">
                                     <i class="fa fa-shopping-cart"></i>
+                                    <span class="notify" id="CartCount">@Session["count"]</span>
                                 </div>
-                                <small class="text"> Cart </small>
+                                <small class="text">@Html.ActionLink("Giỏ hàng", "Index", "Cart", new { }, null)</small>
                             </a>
                         </div>
                     </div> <!-- widgets-wrap.// -->
@@ -100,6 +114,7 @@
         </div> <!-- container.// -->
     </section> <!-- header-main .// -->
 
+
     <nav class="navbar navbar-main navbar-expand-lg border-bottom">
         <div class="container">
 
@@ -107,62 +122,30 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
+
             <div class="collapse navbar-collapse" id="main_nav">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-bars text-muted mr-2"></i> Categories </a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Machinery</a>
-                            <a class="dropdown-item" href="#">Electronics</a>
-                            <a class="dropdown-item" href="#">Home textile</a>
-                            <a class="dropdown-item" href="#">Home and kitchen</a>
-                            <a class="dropdown-item" href="#">Service and equipment</a>
-                            <a class="dropdown-item" href="#">Healthcare items</a>
-                            <a class="dropdown-item" href="#">Toys and Hobbies</a>
-                        </div>
+                       
+                        
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Ready to ship</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Trade shows</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sell with us</a>
-                    </li>
+
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Demo pages</a>
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Trang cần tìm</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="page-index.html">Main</a>
-                            <a class="dropdown-item" href="page-category.html">All category</a>
-                            <a class="dropdown-item" href="page-listing-large.html">Listing list</a>
-                            <a class="dropdown-item" href="page-listing-grid.html">Listing grid</a>
-                            <a class="dropdown-item" href="page-shopping-cart.html">Shopping cart</a>
-                            <a class="dropdown-item" href="page-detail-product.html">Item detail</a>
-                            <a class="dropdown-item" href="page-content.html">Info content</a>
-                            <a class="dropdown-item" href="page-user-login.html">Page login</a>
-                            <a class="dropdown-item" href="page-user-register.html">Page register</a>
-                            <a class="dropdown-item disabled text-muted" href="#">More components</a>
+                            <a class="dropdown-item" @Html.ActionLink("Trang chủ", "Index", "Home")</a>
+                            @*<a class="dropdown-item" @Html.ActionLink("Tất cả danh mục", "Index", "Category")</a>
+        <a class="dropdown-item" @Html.ActionLink("Danh sách liệt kê", "Listing", "Large")</a>
+        <a class="dropdown-item" @Html.ActionLink("Danh sách lưới", "Listing", "Grid")</a>
+        <a class="dropdown-item" @Html.ActionLink("Giỏ hàng", "Index", "Category")</a>*@
+                            <a class="dropdown-item" @Html.ActionLink("Tất cả danh mục", "Index", "Category")</a>
+                            <a class="dropdown-item" @Html.ActionLink("Trang Đăng Nhập", "Login", "Home")</a>
+                            <a class="dropdown-item" @Html.ActionLink("Trang Đăng Ký", "Register", "Home")</a>
+
                         </div>
                     </li>
                 </ul>
-                <ul class="navbar-nav ml-md-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Get the app</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="http://example.com" data-toggle="dropdown">English</a>
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="#">Russian</a>
-                            <a class="dropdown-item" href="#">French</a>
-                            <a class="dropdown-item" href="#">Spanish</a>
-                            <a class="dropdown-item" href="#">Chinese</a>
-                        </div>
-                    </li>
-                </ul>
+
             </div> <!-- collapse .// -->
         </div> <!-- container .// -->
     </nav>
@@ -178,9 +161,9 @@
                     <table class="table table-borderless table-shopping-cart">
                         <thead class="text-muted">
                             <tr class="small text-uppercase">
-                                <th scope="col">Product</th>
-                                <th scope="col" width="120">Quantity</th>
-                                <th scope="col" width="120">Price</th>
+                                <th scope="col">Sản phẩm</th>
+                                <th scope="col" width="120">Số lượng</th>
+                                <th scope="col" width="120">Giá</th>
                                 <th scope="col" class="text-right" width="200"> </th>
                             </tr>
                         </thead>
@@ -195,7 +178,7 @@
                                                 <div class="aside"><img src="~/Content/images/items/@item.Product.Avartar" class="img-sm"></div>
                                                 <figcaption class="info">
                                                     <a href="#" class="title text-dark">@item.Product.ShortDes</a>
-                                                    <p class="text-muted small">Size: XL, Color: blue, <br> Brand: Gucci</p>
+                                                    <p class="text-muted small">Kích cỡ: XL, Màu sắc: blue, <br> Thương hiệu: Iphone</p>
                                                 </figcaption>
                                             </figure>
                                         </td>
@@ -218,9 +201,9 @@
 
                             }
                             else
-            {
-                <p> Không có sản phẩm trong giỏ hàng </p>
-            }
+                            {
+                                <p> Không có sản phẩm trong giỏ hàng </p>
+                            }
 
                         </tbody>
                     </table>
@@ -232,7 +215,7 @@
                 </div> <!-- card.// -->
 
                 <div class="alert alert-success mt-3">
-                    <p class="icontext"><i class="icon text-success fa fa-truck"></i> Free Delivery within 1-2 weeks</p>
+                    <p class="icontext"><i class="icon text-success fa fa-truck"></i>Giao hàng miễn phí trong vòng 1-2 tuần</p>
                 </div>
 
             </main> <!-- col.// -->
@@ -240,35 +223,20 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <form>
-                            <div class="form-group">
-                                <label>Have coupon?</label>
-                                <div class="input-group">
-                                    <input type="text" class="form-control" name="" placeholder="Coupon code">
-                                    <span class="input-group-append">
-                                        <button class="btn btn-primary">Apply</button>
-                                    </span>
-                                </div>
-                            </div>
+                            
                         </form>
                     </div> <!-- card-body.// -->
                 </div>  <!-- card .// -->
                 <div class="card">
                     <div class="card-body">
+                        
                         <dl class="dlist-align">
-                            <dt>Total price:</dt>
-                            <dd class="text-right">USD 568</dd>
-                        </dl>
-                        <dl class="dlist-align">
-                            <dt>Discount:</dt>
-                            <dd class="text-right">USD 658</dd>
-                        </dl>
-                        <dl class="dlist-align">
-                            <dt>Total:</dt>
-                            <dd class="text-right  h5"><strong>$1,650</strong></dd>
+                            <dt>Tổng cộng:</dt>
+                            <dd class="text-right  h5"><strong>600000 Vnđ</strong></dd>
                         </dl>
                         <hr>
                         <p class="text-center mb-3">
-                            <img src="~Content/misc/payments.png" height="26">
+
                         </p>
 
                     </div> <!-- card-body.// -->
