--- a/Webbanhang/Views/Home/Login.cshtml
+++ b/Webbanhang/Views/Home/Login.cshtml
@@ -10,68 +10,76 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-2 col-lg-3 col-md-12">
-
                     <a href="@Url.Action("Index","Home", new {})" class="brand-wrap">
                         <img class="logo" src="~/Content/images/logo.png">
                     </a> <!-- brand-wrap.// -->
 
-
                 </div>
                 <div class="col-xl-6 col-lg-5 col-md-6">
-                    <form action="#" class="search-header">
+                    <form action="@Url.Action("Search","Home")" class="search-header" name="timkiem">
                         <div class="input-group w-100">
-                            <select class="custom-select border-right" name="category_name">
-                                <option value="">All type</option>
-                                <option value="codex">Special</option>
-                                <option value="comments">Only best</option>
-                                <option value="content">Latest</option>
-                            </select>
-                            <input type="text" class="form-control" placeholder="Search">
+                            @*<input type="text" name="search" class="form-control" />
+                    <input type="submit" name="submit" value="tìm kiếm" class="form-control"/>*@
 
+
+                            <input type="text" class="form-control" placeholder="Tìm kiếm sản phẩm" name="key">
                             <div class="input-group-append">
                                 <button class="btn btn-primary" type="submit">
-                                    <i class="fa fa-search"></i> Search
+                                    <i class="fa fa-search"></i> Tìm kiếm
                                 </button>
                             </div>
                         </div>
                     </form> <!-- search-wrap .end// -->
-                </div> <!-- col.// -->
+                </div><!-- col.// --> <!-- col.// -->
                 <div class="col-xl-4 col-lg-4 col-md-6">
                     <div class="widgets-wrap float-md-right">
                         <div class="widget-header mr-3">
-                            <a href="@Url.Action("Login", "Home", new {})" class="widget-view">
+                            <a href="@Url.Action("Login","Home", new {})" class="widget-view">
                                 <div class="icon-area">
-
                                     <i class="fa fa-user"></i>
-                                  
                                 </div>
-                                <small class="text"> @Html.ActionLink("Đăng nhập", "Login", "Home", new { }, null) </small>
-                            </a>
+
+
+                                @if (Session["idUser"] != null)
+                                {
+                                    <small class="text">
+                                        <a href="~/Admin/Product/Index">Trang Admin </a>
+                                    </small>
+                                    <a href="~/Home/Logout">Đăng Xuất </a>
+
+                                }
+                                else
+                                {
+                                    <small class="text">
+                                        <a href="~/Home/Login">Đăng Nhập</a>
+                                    </small>
+                                }
+
                         </div>
+
                         <div class="widget-header mr-3">
                             <a href="@Url.Action("Register","Home", new {})" class="widget-view">
-
                                 <div class="icon-area">
-                                    <i class="fa fa-comment-dots"></i>
-                                    
+                                    <i class="fa fa-user"></i>
                                 </div>
-                                <small class="text"> @Html.ActionLink("Đăng Ký", "Register", "Home", new { }, null)</small>
+                                <small class="text">@Html.ActionLink("Đăng Ký", "Register", "Home", new { }, null) </small>
                             </a>
                         </div>
-                        <div class="widget-header mr-3">
+                        @*<div class="widget-header mr-3">
                             <a href="@Url.Action("Listing","Grid", new {})" class="widget-view">
                                 <div class="icon-area">
                                     <i class="fa fa-store"></i>
                                 </div>
-                                <small class="text">@Html.ActionLink("Đặt hàng", "Listing", "Grid", new { }, null) </small>
+                                <small class="text"> @Html.ActionLink("Đặt hàng", "Listing", "Grid", new { }, null) </small>
                             </a>
-                        </div>
+                        </div>*@
                         <div class="widget-header">
-                            <a href="@Url.Action("Shopping","Cart", new {})" class="widget-view">
+                            <a href="@Url.Action("Index","Cart", new {})" class="widget-view">
                                 <div class="icon-area">
                                     <i class="fa fa-shopping-cart"></i>
+                                    <span class="notify" id="CartCount">@Session["count"]</span>
                                 </div>
-                                <small class="text">@Html.ActionLink("Giỏ hàng", "Shopping", "Cart", new { }, null)</small>
+                                <small class="text">@Html.ActionLink("Giỏ hàng", "Index", "Cart", new { }, null)</small>
                             </a>
                         </div>
                     </div> <!-- widgets-wrap.// -->
@@ -80,6 +88,7 @@
         </div> <!-- container.// -->
     </section> <!-- header-main .// -->
 
+
     <nav class="navbar navbar-main navbar-expand-lg border-bottom">
         <div class="container">
 
@@ -87,62 +96,23 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
+
             <div class="collapse navbar-collapse" id="main_nav">
                 <ul class="navbar-nav">
+                    
+
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"> <i class="fa fa-bars text-muted mr-2"></i> Categories </a>
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Trang cần tìm</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Machinery</a>
-                            <a class="dropdown-item" href="#">Electronics</a>
-                            <a class="dropdown-item" href="#">Home textile</a>
-                            <a class="dropdown-item" href="#">Home and kitchen</a>
-                            <a class="dropdown-item" href="#">Service and equipment</a>
-                            <a class="dropdown-item" href="#">Healthcare items</a>
-                            <a class="dropdown-item" href="#">Toys and Hobbies</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Ready to ship</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Trade shows</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Sell with us</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">Demo pages</a>
-                        <div class="dropdown-menu">
-                            <a class="dropdown-item" href="page-index.html">Main</a>
-                            <a class="dropdown-item" href="page-category.html">All category</a>
-                            <a class="dropdown-item" href="page-listing-large.html">Listing list</a>
-                            <a class="dropdown-item" href="page-listing-grid.html">Listing grid</a>
-                            <a class="dropdown-item" href="page-shopping-cart.html">Shopping cart</a>
-                            <a class="dropdown-item" href="page-detail-product.html">Item detail</a>
-                            <a class="dropdown-item" href="page-content.html">Info content</a>
-                            <a class="dropdown-item" href="page-user-login.html">Page login</a>
-                            <a class="dropdown-item" href="page-user-register.html">Page register</a>
-                            <a class="dropdown-item disabled text-muted" href="#">More components</a>
+                            <a class="dropdown-item" @Html.ActionLink("Trang chủ", "Index", "Home")</a>
+                            
+                            <a class="dropdown-item" @Html.ActionLink("Trang Đăng Nhập", "Login", "Home")</a>
+                            <a class="dropdown-item" @Html.ActionLink("Trang Đăng Ký", "Register", "Home")</a>
+
                         </div>
                     </li>
                 </ul>
-                <ul class="navbar-nav ml-md-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Get the app</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="http://example.com" data-toggle="dropdown">English</a>
-                        <div class="dropdown-menu dropdown-menu-right">
-                            <a class="dropdown-item" href="#">Russian</a>
-                            <a class="dropdown-item" href="#">French</a>
-                            <a class="dropdown-item" href="#">Spanish</a>
-                            <a class="dropdown-item" href="#">Chinese</a>
-                        </div>
-                    </li>
-                </ul>
+
             </div> <!-- collapse .// -->
         </div> <!-- container .// -->
     </nav>
@@ -165,11 +135,11 @@
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(m => m.Password)
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Mật khẩu" })
                     </div>
                     <div class="form-group">
 
-                        <input type="submit" name="submit" class="btn btn-primary" value="Login" />
+                        <input type="submit" name="submit" class="btn btn-primary" value="Đăng nhập" />
                     </div>
                 }
             </div>
