--- a/Webbanhang/Views/Login/User.cshtml
+++ b/Webbanhang/Views/Login/User.cshtml
@@ -23,8 +23,8 @@
                 </div> <!-- form-group// -->
 
                 <div class="form-group">
-                    <a href="#" class="float-right">Forgot password?</a>
-                    <label class="float-left custom-control custom-checkbox"> <input type="checkbox" class="custom-control-input" checked=""> <div class="custom-control-label"> Remember </div> </label>
+                    <a href="#" class="float-right">Bạn Quên Mật Khẩu ?</a>
+                    <label class="float-left custom-control custom-checkbox"> <input type="checkbox" class="custom-control-input" checked=""> <div class="custom-control-label"> Ghi nhớ </div> </label>
                 </div> <!-- form-group form-check .// -->
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block"> Login  </button>
